tests/ui/once_redis_concurrent_only.rs
use cached::macros::once;

#[once(redis = true)]
fn load() -> u64 {
    42
}

fn main() {}
